--- a/petunia/src/main/AndroidManifest.xml
+++ b/petunia/src/main/AndroidManifest.xml
@@ -37,7 +37,7 @@
     <application
         android:name="com.imgtec.creator.petunia.app.App"
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/app_icon"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
