--- a/build.gradle
+++ b/build.gradle
@@ -37,7 +37,7 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.2.0-beta3'
+        classpath 'com.android.tools.build:gradle:2.2.0-rc2'
         classpath 'com.neenbedankt.gradle.plugins:android-apt:1.7'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
