Add configuration dialog. Add JWT support.
Signed-off-by: Krzysztof Kocon <krzysztof.kocon@imgtec.com>

--- a/petunia/build.gradle
+++ b/petunia/build.gradle
@@ -118,6 +118,19 @@ android {
             java.srcDirs = ['src/main/java', 'src/main/java-gen']
         }
     }
+
+    packagingOptions {
+        exclude 'META-INF/DEPENDENCIES.txt'
+        exclude 'META-INF/LICENSE.txt'
+        exclude 'META-INF/NOTICE.txt'
+        exclude 'META-INF/NOTICE'
+        exclude 'META-INF/LICENSE'
+        exclude 'META-INF/DEPENDENCIES'
+        exclude 'META-INF/notice.txt'
+        exclude 'META-INF/license.txt'
+        exclude 'META-INF/dependencies.txt'
+        exclude 'META-INF/LGPL2.1'
+    }
 }
 
 dependencies {
@@ -149,7 +162,7 @@ dependencies {
     compile petuniaDependencies.okhttp
     compile petuniaDependencies.gson
     compile petuniaDependencies.okhttpLoggingInterceptor
-
+    compile 'io.jsonwebtoken:jjwt:0.7.0'
 
     compile project(':di')
 
